# soma-governance-gateway

./: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  architecture.md  safety-controls.md  twitter-demo-script.md
examples/: client_example.py  tasks.json
sdk/python/: __init__.py  gateway_client.py  somaos_client.py
src/browser_ops/: api.py  approvals.py  audit.py  auth.py  client.py  governance.py  models.py  planner.py  policy.py  runner.py  telemetry.py
tests/: test_api.py  test_governance_api.py  test_planner.py  test_runner.py
