[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "somaos-governance-gateway"
version = "0.2.0"
requires-python = ">=3.10"
description = "SomaOS Governance Gateway: policy, approvals, and audit replay for AI workflows."
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.28"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
